--- a/GradSchool.html
+++ b/GradSchool.html
@@ -87,7 +87,7 @@
         <h1 class="heading-primary">Masters Degree</h1>
         <div class="project-cs-hero__info">
           <p class="text-primary">
-            Standing balance of legged robots
+            Improved standing balance of legged robots through leveraging unified reduced order model of standing model
           </p>
         </div>
         <div class="project-cs-hero__cta">
@@ -104,22 +104,27 @@
     <section class="project-details">
       <div class="main-container">
         <div class="project-details__content">
-          <div class="project-details__showcase-img-cont">
-            <img
-              src="./assets/png/Modeling_Bipeds.png"
-              alt="Project Image"
-              class="project-details__showcase-img"
-            />
+          <div class="flex-container">
+            <img src="./assets/gif/VHIPPFW_reducedOrder.gif" alt="model" class="inner-image">
+            <img src="./assets/gif/VHIPPFW_oneLeg.gif" alt="robot" class="inner-image">
           </div>
           <div class="project-details__content-main">
             <div class="project-details__desc">
-              <h3 class="project-details__content-title">Project Overview</h3>
+              <h3 class="project-details__content-title">Thesis Overview</h3>
               <p class="project-details__desc-para">
                 Legged robots are complex systems with a high degree of freedom which make
                 optimal control methodolgies for the whole body dynamics computationally 
                 complex, especially for planning over long time horizions. Reduced order models
                 encapsulate the whole body dynamics into lower degree of freedom representation 
-                more suitible. My research extended the existing reduced order models to include
+                more suitible.
+              </p>
+                <div class="project-details__small-img-cont">
+                  <img src="./assets/png/Modeling_Bipeds.png"
+                    class="project-details__small-img"
+                    alt="modeling biped">
+                </div>
+              <p class="project-details__desc-para">  
+                My research extended the existing reduced order models to include
                 all availible standing balance strategies:
               </p>
               <ol class ="project-details__desc-list">
@@ -135,41 +140,53 @@
                 increase ground reaction force magnitude.
               </ol>
             </div>
-            <div class="project-details__showcase-img-cont">
+            <div class="project-details__small-img-cont">
               <img
                 src="./assets/png/reduced order model.png"
                 alt="Project Image"
-                class="project-details__showcase-img"
+                class="project-details__small-img"
               />
             </div>
             <div class="project-details__desc">
               <p class="project-details__desc-para">
                 With this unified model we examined how access to all balancing strategies impacts push recovery
-                performance.
+                performance. The key contributions of my research was examining the stability regions of existing models
+                to examine the contribution each balancing stratey has on overall stability, push recovery simulation using
+                trajectory optimization of the unified model against existing models, and finally developed a nonlinear model
+                predictive controller based on the unified and existing reduced order models then examining each controllers
+                performance on push recovery simulations of the reduced order model dynamics as well as being implemented 
+                on simple simulated one legged robot.
               </p>
+              <div class="project-details__tools-used">
+                <h3 class="project-details__content-title">Tools Used</h3>
+                <div class="skills">
+                  <div class="skills__skill">Trajectory Optimization</div>
+                  <div class="skills__skill">Nonlinear Model Predictive Control</div>
+                  <div class="skills__skill">Dynamic Modeling of Mechanical Systems</div>
+                  <div class="skills__skill">MATLAB</div>
+                  <div class="skills__skill">Simulink</div>
+                  <div class="skills__skill">CAD</div>
+                  <div class="skills__skill">C++</div>
+                </div>
             </div>
-            <div class="project-details__tools-used">
-              <h3 class="project-details__content-title">Tools Used</h3>
-              <div class="skills">
-                <div class="skills__skill">Trajectory Optimization</div>
-                <div class="skills__skill">Nonlinear Model Predictive Control</div>
-                <div class="skills__skill">Dynamic Modeling of Mechanical Systems</div>
-                <div class="skills__skill">MATLAB</div>
-                <div class="skills__skill">Simulink</div>
-                <div class="skills__skill">CAD</div>
-                <div class="skills__skill">C++</div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
 
-    <section class="project-details" id ="publications">
-      <div class="main-container">
-        <div class="project-details__content">
-          <div class="project-details__content-main"></div> 
-            <div class ="project-details__desc">
+            <h3 class="project-details__content-title">Stability Analysis</h3>
+            <p class="project-details__desc-para">
+              For the stability analysis we examined the linear inverted pendumlum (LIP), linear inverted pendulum plus flywheel 
+              (LIPFW), and variable height inverted pendulum (VHIP) models. These models correspond to an ankle, ankle + hip, and
+              ankle + variable height balancing strategy. We use athropromorphic model parameters so as to gain insight on human balancing
+              and better elucidate each strategies utility in standing balance for legged robots.
+            </p>
+
+
+            <div class="project-details__small-img-cont">
+              <img
+                src="./assets/gif/VHIPPFW_reducedOrder.gif"
+                class="project-details__small-img"
+              />
+          
+            </div>
+            <div class ="project-details__desc" id = "publications">
               <h3 class="project-details__content-title">Puplications</h3>
               <a href="https://ieeexplore.ieee.org/document/9981193" class="project-details__link">T. Huckell and A. R. Wu,
                 "Improved Zero Step Push Recovery with a Unified Reduced Order Model of Standing Balance," 
@@ -177,16 +194,7 @@
                 pp. 8321-8327, doi: 10.1109/IROS47612.2022.9981193.
               </a>
             </div > 
-          </div >
-        </div >
-      </div>
-
-    </section>
-    <section class="project-details" id ="posters">
-      <div class="main-container">
-        <div class="project-details__content">
-          <div class="project-details__content-main"></div> 
-            <div class ="project-details__desc">
+            <div class ="project-details__desc" id = "posters">
               <h3 class="project-details__content-title">Posters</h3>
                 <a href="Posters/IngenuityLabsPoster_ThomasHuckell.pdf" class="project-details__link">
                   "Improved Standing Balancing For Legged Robots With Unified
@@ -202,11 +210,11 @@
                 </a>
               </div > 
             </div >
-          </div >
+          </div>
         </div>
       </div>
     </section>
-
+    
     <footer class="main-footer">
       <div class="main-container">
         <div class="main-footer__upper">
