--- a/proj_ELEC848.html
+++ b/proj_ELEC848.html
@@ -103,18 +103,21 @@
       <div class="main-container">
         <div class="project-details__content">
           <div class ="project-details__showcase-img-cont">
-            <div class="flex-container">
-              <img
-                src="./assets/gif/CRS_traj.gif"
-                alt="Project Image"
-                class="inner-image"
-              />
-              <img 
-                src="./assets/png/test5-ww.png"
-                alt="Project Image"
-                class="inner-image"
-              />
-            </div>
+            <figure>
+              <div class="flex-container">
+                <img
+                  src="./assets/gif/CRS_traj.gif"
+                  alt="Project Image"
+                  class="inner-image"
+                />
+                <img 
+                  src="./assets/png/test5-ww.png"
+                  alt="Project Image"
+                  class="inner-image"
+                />
+              </div>
+              <figcaption>CRS A465 running trajectory to designed to exite dynamic characteristics.</figcaption>
+            </figure>
           </div>
           <div class="project-details__content-main">
             <div class="project-details__desc">
