--- a/proj_QMAST.html
+++ b/proj_QMAST.html
@@ -39,11 +39,11 @@
             </li>
             <li class="header__link-wrapper">
               <a href="./index.html#projects" class="header__link">
-                Projects
+                Projects & Experience
               </a>
             </li>
             <li class="header__link-wrapper">
-              <a href="./index.html#contact" class="header__link"> Contact </a>
+              <a href="./proj_QMAST#contact" class="header__link"> Contact </a>
             </li>
           </ul>
           <div class="header__main-ham-menu-cont">
@@ -72,11 +72,11 @@
             </li>
 
             <li class="header__sm-menu-link">
-              <a href="./index.html#projects"> Projects </a>
+              <a href="./index.html#projects"> Projects & Experience </a>
             </li>
 
             <li class="header__sm-menu-link">
-              <a href="./index.html#contact"> Contact </a>
+              <a href="./proj_QMAST#contact"> Contact </a>
             </li>
           </ul>
         </div>
