--- a/proj_TA.html
+++ b/proj_TA.html
@@ -39,11 +39,11 @@
             </li>
             <li class="header__link-wrapper">
               <a href="./index.html#projects" class="header__link">
-                Projects
+                Projects & Experience
               </a>
             </li>
             <li class="header__link-wrapper">
-              <a href="./index.html#contact" class="header__link"> Contact </a>
+              <a href="./proj_TA.html#contact" class="header__link"> Contact </a>
             </li>
           </ul>
           <div class="header__main-ham-menu-cont">
@@ -89,7 +89,7 @@
           <p class="text-primary">
             While working as a Teaching Assistant for the mechatronics courses my duties 
             included teaching the course content in tutorials, running the labs where 
-            students got hand on experience working on hardware and grading. For my teaching in 
+            students got hand on experience working on hardware and grading submitted coursework. For my teaching in 
             the 2020-2021 year I was recognized with the "Dean's Teaching Assistant Award". 
 
           </p>
@@ -111,26 +111,27 @@
               <h3 class="project-details__content-subtitle-title">MECH 217 Measurements for Mechatronics</h3>
               <h1 class="project-details__content-subtitle-sub">Fall 2019, Fall 2020</h1>
               <p class="project-details__desc-para">
-                A lab based course that provides hands experience working with mircrocontrollers for the purpose
-                of measurements and analysis. Students learn to Identify and Quantify measurement objectives in practical 
-                engineering applications; Apply statistical analysis, including uncertainty, for interpreting test results. 
-                Specify, Select, and Apply transducers, acquisition systems, and 2 procedures to measure pressure, strain, 
+                As TA for MECH 217 I provided students with assistance on how to use mircrocontrollers for the purpose
+                of measurements and analysis. Students learned to Identify and Quantify measurement objectives in practical 
+                engineering applications; apply statistical analysis, including uncertainty, for interpreting test results. 
+                Specify, select, and apply transducers, acquisition systems, and 2 procedures to measure pressure, strain, 
                 temperature and position using both analog and digital sesnsors.
               </p>
               <h3 class="project-details__content-subtitle-title">MECH 210 Electronic Circuits and Motors for Mechatronics</h3>
               <h1 class="project-details__content-subtitle-sub">Winter 2020, Winter 2021 (Head TA), Winter 2022 (Head TA)</h1>
               <p class="project-details__desc-para">
-                The course material teaches the theory of circuit analysisis techniques of RLC circuits. Theses methods are then used 
+                As TA for MECH 210 I taught circuit analysisis techniques of RLC circuits in tutorial sessions. Theses methods are then used 
                 to characterize the behavior of common mechatronic circuits; transformers, diodes, solenoids, DC motors and 
-                actuators. Transistors are introduced in switching applications. The course also has biweekly Labs that focus on methods of 
-                motor control for DC motors including . 
+                actuators. Students are then introduced to transistors, and their switching applications. The theory is then applied in the lab component of 
+                the course which I facilitated guiding students in hands in various methods of motor control for DC motors including force control
+                of a series elastic actuator. 
               </p>
               <h3 class="project-details__content-subtitle-title">MECH 310 Digital Systems for Mechatronics</h3>
               <h1 class="project-details__content-subtitle-sub">Fall 2022 (Head TA)</h1>
               <p class="project-details__desc-para">
-                The course material covers a wide range of topics including; servo motors, stepper motors PLC control of sequential logic 
-                FFT application for machine health monitoring, Industrial communication standards for local and internet-based information transfer
-                Lab activities will focus on design, construction, and testing of microcontroller based mechatronic systems such as programming a rapid prototyped 
+                As TA for MECH 310 I cover and review course material in tutorial sessions. This covers a wide range of topics including; servo motors, stepper motors PLC control of sequential logic 
+                FFT application for machine health monitoring, industrial communication standards for local and internet-based information transfer.
+                The lab sessions which I administered focused on design, construction, and testing of microcontroller based mechatronic systems such as programming a rapid prototyped 
                 CNC machine to run g-code to draw the Queen's logo.
               </p>
             </div>
@@ -175,7 +176,7 @@
               </a>
             </div>
           </div>
-          <div class="main-footer__row main-footer__row-2">
+          <div class="main-footer__row main-footer__row-2" id="contact">
             <h4 class="heading heading-sm text-lt">Thomas Huckell</h4>
             <p class="main-footer__short-desc">
               tom.huckell@gmail.com
