fix scaling of images for mobile devices

--- a/proj_ELEC848.html
+++ b/proj_ELEC848.html
@@ -108,7 +108,7 @@
                 <img
                   src="./assets/gif/CRS_traj.gif"
                   alt="Project Image"
-                  class="inner-image"
+                  class="inner-image-vsmall"
                 />
                 <img 
                   src="./assets/png/test5-ww.png"
@@ -116,7 +116,7 @@
                   class="inner-image"
                 />
               </div>
-              <figcaption>CRS A465 running trajectory to designed to exite dynamic characteristics.</figcaption>
+              <figcaption>CRS A465 running a programmed trajectory designed to exite dynamic characteristics.</figcaption>
             </figure>
           </div>
           <div class="project-details__content-main">
