--- a/proj_TA.html
+++ b/proj_TA.html
@@ -112,7 +112,7 @@
               <h1 class="project-details__content-subtitle-sub">Fall 2019, Fall 2020</h1>
               <p class="project-details__desc-para">
                 As TA for MECH 217 I provided students with assistance on how to use mircrocontrollers for the purpose
-                of measurements and analysis. Students learned to Identify and Quantify measurement objectives in practical 
+                of measurements and analysis. Students learned to Identify and qantify measurement objectives in practical 
                 engineering applications; apply statistical analysis, including uncertainty, for interpreting test results. 
                 Specify, select, and apply transducers, acquisition systems, and 2 procedures to measure pressure, strain, 
                 temperature and position using both analog and digital sesnsors.
@@ -123,7 +123,7 @@
                 As TA for MECH 210 I taught circuit analysisis techniques of RLC circuits in tutorial sessions. Theses methods are then used 
                 to characterize the behavior of common mechatronic circuits; transformers, diodes, solenoids, DC motors and 
                 actuators. Students are then introduced to transistors, and their switching applications. The theory is then applied in the lab component of 
-                the course which I facilitated guiding students in hands in various methods of motor control for DC motors including force control
+                the course which I facilitated, guiding students various methods of DC motor control using microcontrollers and force control
                 of a series elastic actuator. 
               </p>
               <h3 class="project-details__content-subtitle-title">MECH 310 Digital Systems for Mechatronics</h3>
