--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </li>
             <li class="header__link-wrapper">
               <a href="./index.html#projects" class="header__link">
-                Projects
+                Projects & Experience
               </a>
             </li>
             <li class="header__link-wrapper">
@@ -90,8 +90,9 @@
             Robotisist | Mechanical Engineer | Maker
           </p>
         </div>
+        
         <div class="home-hero__cta">
-          <a href="./index.html#projects" class="btn btn--bg">Projects</a>
+          <a href="./index.html#projects" class="btn btn--bg">Projects & Experience</a>
         </div>
       </div>
       <div class="home-hero__socials">
@@ -114,6 +115,7 @@
           </a>
         </div>
       </div>
+      
       <div class="home-hero__mouse-scroll-cont">
         <div class="mouse"></div>
       </div>
@@ -123,8 +125,8 @@
         <h2 class="heading heading-sec heading-sec__mb-med">
           <span class="heading-sec__main">About Me</span>
           <span class="heading-sec__sub">
-            Hardworking and determined indivual with a passion for robotics. I enjoy tackling complex 
-            problems and hands on work. 
+            Hardworking and determined indivual with a passion for robotics. I enjoy working hands on to design and develope solutions to
+            tackle complex problems. 
 
           </span>
         </h2>
@@ -160,13 +162,15 @@
           <div class="about__content-skills">
             <h3 class="about__content-title">My Skills</h3>
             <div class="skills">
-                <div class="skills__skill">Controls</div>
-                <div class="skills__skill">Dynamic Modeling of Mechanical Systems</div>
+                <div class="skills__skill">Control</div>
+                <div class="skills__skill">Dynamic Modeling</div>
                 <div class="skills__skill">MATLAB</div>
                 <div class="skills__skill">Simulink</div>
                 <div class="skills__skill">CAD</div>
+                <div class="skills__skill">Data Analysis</div>
                 <div class="skills__skill">Python</div>
                 <div class="skills__skill">C++</div>
+                <div class="skills__skill">Rapid Prototyping</div>
             </div>
           </div>
         </div>
@@ -219,12 +223,12 @@
               />
             </div>
             <div class="projects__row-content">
-              <h3 class="projects__row-content-title">Dynamic Parameters Identification of CRS A465 Manipulator</h3>
+              <h3 class="projects__row-content-title">Dynamic Parameter Identification of CRS A465 Manipulator</h3>
               <h3 class="projects__row-content-subtitle">Febuary-April 2022</h3>
               <p class="projects__row-content-desc">
                 In advanced robotic applications an accurate dynamic model is critical for designing
-                control systems, planning operations, process supervision, simulations, and training. The dynamic parameters of manipulator
-                were experimentally identified for CRS manipulator in final project of graduate controls course.
+                control systems, planning operations, process supervision, simulations, and training. The dynamic parameters 
+                were experimentally identified for a CRS manipulator in final the project of a graduate controls course.
               </p>
               <a
                 href="./proj_ELEC848.html"
