--- a/proj_ELEC848.html
+++ b/proj_ELEC848.html
@@ -39,7 +39,7 @@
             </li>
             <li class="header__link-wrapper">
               <a href="./index.html#projects" class="header__link">
-                Projects
+                Projects & Experience
               </a>
             </li>
             <li class="header__link-wrapper">
@@ -87,10 +87,10 @@
         <h1 class="heading-primary">Parameter Identification of CRS A465 Manipulator</h1>
         <div class="project-cs-hero__info">
           <p class="text-primary">
-            Robotic manipulators require accurate dynamic model of the system for effective control system design, 
-            and for accurate planning, simulation and training. The models parameters such as link mass, inertia, 
+            Robotic manipulators require an accurate dynamic model of the system for effective control system design, 
+            and for accurate planning, simulation and training. The model's parameters such as link mass, inertia, 
             and frictional properties are not always provided in technical manuals or accurate to the individual robot. 
-            Experimental identification is used to accurately estimate these values which consists of consists of robot 
+            Experimental identification is used to accurately estimate these values which consists of robot 
             modeling, trajectory generation, data acquisition, signal processing, parameter estimation and model validation. 
             In the final project for ELEC 848 a graduate controls course, this process was carried out for the CRS A465 robot
             to build an accurate model.
@@ -198,34 +198,12 @@
                   alt="icon"
                 />
               </a>
-              <a target="_blank" rel="noreferrer" href="#">
-                <img
-                  class="main-footer__icon"
-                  src="./assets/png/twitter-ico.png"
-                  alt="icon"
-                />
-              </a>
-              <a target="_blank" rel="noreferrer" href="#">
-                <img
-                  class="main-footer__icon"
-                  src="./assets/png/yt-ico.png"
-                  alt="icon"
-                />
-              </a>
-              <a target="_blank" rel="noreferrer" href="#">
-                <img
-                  class="main-footer__icon main-footer__icon--mr-none"
-                  src="./assets/png/insta-ico.png"
-                  alt="icon"
-                />
-              </a>
             </div>
           </div>
           <div class="main-footer__row main-footer__row-2">
-            <h4 class="heading heading-sm text-lt">John Doe</h4>
+            <h4 class="heading heading-sm text-lt">Thomas Huckell</h4>
             <p class="main-footer__short-desc">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit facilis
-              tempora explicabo quae quod deserunt
+              tom.huckell@gmail.com
             </p>
           </div>
         </div>
