--- a/proj_QMAST.html
+++ b/proj_QMAST.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Case Study of Project 2</title>
+    <title>QMAST</title>
     <meta name="description" content="Case study page of Project" />
 
     <link rel="stylesheet" href="css/style.css" />
@@ -43,7 +43,7 @@
               </a>
             </li>
             <li class="header__link-wrapper">
-              <a href="./proj_QMAST#contact" class="header__link"> Contact </a>
+              <a href="./proj_QMAST.html#contact" class="header__link"> Contact </a>
             </li>
           </ul>
           <div class="header__main-ham-menu-cont">
@@ -76,7 +76,7 @@
             </li>
 
             <li class="header__sm-menu-link">
-              <a href="./proj_QMAST#contact"> Contact </a>
+              <a href="./proj_QMAST.html#contact"> Contact </a>
             </li>
           </ul>
         </div>
@@ -92,7 +92,7 @@
             to learning the fabrication process of composite materials.
             After a year as a general member I was promoted to manager of the mechanical team. In this role I was in 
             charge of planning, precurement of materials, training and workload delegation. Additionally, as manager
-            of the mechanical team I leasied with the electical and software teams to coordinate deadlines and dependecies between teams.
+            of the mechanical team I liased with the electical and software teams to coordinate deadlines and dependecies between teams.
           </p>
         </div>
       </div>
@@ -159,10 +159,10 @@
               </a>
             </div>
           </div>
-          <div class="main-footer__row main-footer__row-2">
+          <div class="main-footer__row main-footer__row-2" id = "contact">
             <h4 class="heading heading-sm text-lt">Thomas Huckell</h4>
             <p class="main-footer__short-desc">
-              ABC
+              tom.huckell@gmail.com
             </p>
           </div>
         </div>
